<resources>
    <string name="app_name">Dicom</string>
    <string name="action_settings">Settings</string>
    <string name="contact_image">contact image</string>
    <string name="input_title">Title</string>
    <string name="input_description">Description</string>
    <string name="input_amount">Amount</string>
    <string name="date_pick_label">Wasn\'t today?\nPick a date</string>
    <string name="user_paid">You paid</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="action_next">Next</string>
    <string name="share">Share</string>
    <string name="sort_list">Sort list</string>
    <string name="title_activity_single_contact">SingleContact</string>

    <string name="intent_extra_name" translatable="false">name</string>
    <string name="intent_extra_phone" translatable="false">phone</string>
    <string name="expense_image">expense image</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Clear all expenses</string>
    <string name="date_icon">date icon</string>
</resources>
