<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:gravity="end"
              android:padding="5dp"
              android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/input_title_layout"
            android:hint="@string/input_title"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/input_description_layout"
            android:hint="@string/input_description"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/input_amount_layout"
            android:hint="@string/input_amount"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:selectAllOnFocus="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pick_date_label"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textAlignment="textEnd"
                android:layout_marginEnd="5dp"
                android:text="@string/date_pick_label"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_today_pink_24dp"
                android:id="@+id/input_date"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:background="#FFFFFF"/>
    </LinearLayout>

    <CheckBox
            android:text="@string/user_paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_paid"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:layoutDirection="rtl"
            android:checked="true"/>

</LinearLayout>
